two factor login added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,6 @@ spring:
   application:
     name: delivery-backend
 
-  # Use H2 in-memory database for demo - no PostgreSQL setup needed!
   datasource:
     url: jdbc:h2:mem:deliverydb
     driver-class-name: org.h2.Driver
@@ -28,13 +27,15 @@ spring:
 server:
   port: 8080
 
-# JWT configuration
 app:
+  name: "Campus Delivery"
   jwt:
     secret: "delivery-app-secret-key-must-be-at-least-32-characters-long"
-    expiration-ms: 86400000  # 24 hours
+    expiration-ms: 86400000   # 24 hours
 
-# Expose all actuator endpoints for demo
+  # Change this to something only you know before demo!
+  staff-registration-key: "staff-secret-2024"
+
 management:
   endpoints:
     web:
@@ -44,4 +45,4 @@ management:
 logging:
   level:
     com.company.delivery: DEBUG
-    org.springframework.web: INFO
+    org.springframework.security: DEBUG
